tests/NormalTests/paczka1/fuzzy1/39996654.err
Error in line 5: 9xC A331 76,6
Error in line 2: Z6UNHZoF4 A331 41,3
Error in line 14: ZHNl A331 5,4
Error in line 24: OdcLYFP96u Sz27 457,0
Error in line 23: OdcLYFP96u S327 95,2
Error in line 36: S524 A728 46,2
Error in line 38: S524 A--1 82,7
Error in line 40: 9xC A728 -3,6
